update toc and api/io for build errors

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,7 +28,7 @@ nav:
   - Advanced:
     - Managing Memory Usage: advanced/memory.md
     - Partitioning: advanced/partitioning.md
-    - Pushdowns: advanced/pushdowns.md
+    # - Pushdowns: advanced/pushdowns.md
   - Integrations:
     - Catalogs & Tables:
       - Apache Hudi: integrations/hudi.md
@@ -200,9 +200,9 @@ markdown_extensions:
 # Plugins
 plugins:
 - markdown-exec
-- mkdocs-jupyter:
-    execute: false
-    include_source: true
+# - mkdocs-jupyter:
+#     execute: false
+#     include_source: true
 - search:
     separator: '[\s\u200b\-_,:!=\[\]()"`/]+|\.(?!\d)|&[lg]t;|(?!\b)(?=[A-Z][a-z])'
 - autorefs:
