refactor(exprs): 6 of 6 move all utf8 exprs to own crate (#4312)
## Changes Made

moves all `daft-functions/utf8` to new crate `daft-function-utf8`. and
refactored them all to the new expr pattern.

this serves 2 purposes:

1. Moving them to their own crate provides better incremental
compilation as we can fan out for the various functions instead of
having one uber crate with all functions.
2. It stress tests the new expr pattern to make sure it's able to handle
a variety of cases. Moving every utf8 function over demonstrates that
the new pattern is sufficient.

## Note for reviewers

This looks like a lot of code, but it's **ALL** refactor. There isn't
any net new code added, so the existing test cases should ensure that no
regressions have happened.


## Related Issues

<!-- Link to related GitHub issues, e.g., "Closes #123" -->

## Checklist

- [ ] Documented in API Docs (if applicable)
- [ ] Documented in User Guide (if applicable)
- [ ] If adding a new documentation page, doc is added to
`docs/mkdocs.yml` navigation
- [ ] Documentation builds and is formatted properly (tag @/ccmao1130
for docs review)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ daft-distributed = {path = "src/daft-distributed", default-features = false}
 daft-dsl = {path = "src/daft-dsl", default-features = false}
 daft-functions = {path = "src/daft-functions"}
 daft-functions-json = {path = "src/daft-functions-json", default-features = false}
+daft-functions-utf8 = {path = "src/daft-functions-utf8", default-features = false}
 daft-hash = {path = "src/daft-hash", default-features = false}
 daft-image = {path = "src/daft-image", default-features = false}
 daft-io = {path = "src/daft-io", default-features = false}
@@ -72,6 +73,7 @@ python = [
   "daft-distributed/python",
   "daft-dsl/python",
   "daft-functions-json/python",
+  "daft-functions-utf8/python",
   "daft-functions/python",
   "daft-image/python",
   "daft-io/python",
@@ -165,6 +167,7 @@ members = [
   "src/daft-dsl",
   "src/daft-functions",
   "src/daft-functions-json",
+  "src/daft-functions-utf8",
   "src/daft-hash",
   "src/daft-image",
   "src/daft-io",
@@ -216,6 +219,7 @@ daft-core = {path = "src/daft-core"}
 daft-dsl = {path = "src/daft-dsl"}
 daft-functions = {path = "src/daft-functions"}
 daft-functions-json = {path = "src/daft-functions-json"}
+daft-functions-utf8 = {path = "src/daft-functions-utf8"}
 daft-hash = {path = "src/daft-hash"}
 daft-local-execution = {path = "src/daft-local-execution"}
 daft-logical-plan = {path = "src/daft-logical-plan"}
