refactor(exprs): move all `list` exprs to new expr (#4340)
## Changes Made

- moves all `.list` exprs to the new function_registry based
implementation
- adds some utility methods to `FunctionArgs` for extracting scalar
values from series and literals
- add same `_eval_expressions` helper method to `Expressions` to reduce
boilerplate

### ⚠️ There is a very small breaking change to sql here. 

We didn't really have any documentation on the sql `list_sort` function
or the arguments so I personally don't think we need to introduce a
breaking release for this, but if we want to be **super** safe, we
could.



For `list_sort` we had some custom syntax so you could do 

```sql
select list_sort(my_col, DESC);
select list_sort(my_col, ASC);
```

In order to make the function compliant with all of our existing
functions and avoid having one-off syntax for a function, it now needs
to be called like all other functions.

```sql
-- positional
select list_sort(my_col, true, true) -- desc=true, nulls_first=true
-- args
select list_sort(my_col, desc:=true, nulls_first:=true)
```




## Related Issues

<!-- Link to related GitHub issues, e.g., "Closes #123" -->

## Checklist

- [ ] Documented in API Docs (if applicable)
- [ ] Documented in User Guide (if applicable)
- [ ] If adding a new documentation page, doc is added to
`docs/mkdocs.yml` navigation
- [ ] Documentation builds and is formatted properly (tag @/ccmao1130
for docs review)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ daft-distributed = {path = "src/daft-distributed", default-features = false}
 daft-dsl = {path = "src/daft-dsl", default-features = false}
 daft-functions = {path = "src/daft-functions"}
 daft-functions-json = {path = "src/daft-functions-json", default-features = false}
+daft-functions-list = {path = "src/daft-functions-list", default-features = false}
 daft-functions-utf8 = {path = "src/daft-functions-utf8", default-features = false}
 daft-hash = {path = "src/daft-hash", default-features = false}
 daft-image = {path = "src/daft-image", default-features = false}
@@ -73,6 +74,7 @@ python = [
   "daft-distributed/python",
   "daft-dsl/python",
   "daft-functions-json/python",
+  "daft-functions-list/python",
   "daft-functions-utf8/python",
   "daft-functions/python",
   "daft-image/python",
@@ -167,6 +169,7 @@ members = [
   "src/daft-dsl",
   "src/daft-functions",
   "src/daft-functions-json",
+  "src/daft-functions-list",
   "src/daft-functions-utf8",
   "src/daft-hash",
   "src/daft-image",
@@ -219,6 +222,7 @@ daft-core = {path = "src/daft-core"}
 daft-dsl = {path = "src/daft-dsl"}
 daft-functions = {path = "src/daft-functions"}
 daft-functions-json = {path = "src/daft-functions-json"}
+daft-functions-list = {path = "src/daft-functions-list"}
 daft-functions-utf8 = {path = "src/daft-functions-utf8"}
 daft-hash = {path = "src/daft-hash"}
 daft-local-execution = {path = "src/daft-local-execution"}
