--- a/src/daft-logical-plan/Cargo.toml
+++ b/src/daft-logical-plan/Cargo.toml
@@ -13,6 +13,7 @@ daft-algebra = {path = "../daft-algebra", default-features = false}
 daft-core = {path = "../daft-core", default-features = false}
 daft-dsl = {path = "../daft-dsl", default-features = false}
 daft-functions = {path = "../daft-functions", default-features = false}
+daft-functions-list = {path = "../daft-functions-list", default-features = false}
 daft-schema = {path = "../daft-schema", default-features = false}
 derivative = {workspace = true}
 indexmap = {workspace = true}
@@ -49,6 +50,7 @@ python = [
   "daft-core/python",
   "daft-dsl/python",
   "daft-functions/python",
+  "daft-functions-list/python",
   "daft-schema/python"
 ]
 
