--- a/src/daft-recordbatch/Cargo.toml
+++ b/src/daft-recordbatch/Cargo.toml
@@ -9,6 +9,7 @@ common-py-serde = {path = "../common/py-serde", default-features = false}
 common-runtime = {path = "../common/runtime", default-features = false}
 daft-core = {path = "../daft-core", default-features = false}
 daft-dsl = {path = "../daft-dsl", default-features = false}
+daft-functions-list = {path = "../daft-functions-list", default-features = false}
 daft-image = {path = "../daft-image", default-features = false}
 futures = {workspace = true}
 html-escape = {workspace = true}
@@ -29,7 +30,8 @@ python = [
   "common-arrow-ffi/python",
   "common-display/python",
   "common-py-serde/python",
-  "daft-image/python"
+  "daft-image/python",
+  "daft-functions-list/python"
 ]
 
 [lints]
