--- a/src/daft-sql/Cargo.toml
+++ b/src/daft-sql/Cargo.toml
@@ -9,6 +9,7 @@ daft-context = {path = "../daft-context"}
 daft-core = {path = "../daft-core"}
 daft-dsl = {path = "../daft-dsl"}
 daft-functions = {path = "../daft-functions"}
+daft-functions-list = {path = "../daft-functions-list"}
 daft-functions-utf8 = {path = "../daft-functions-utf8"}
 daft-logical-plan = {path = "../daft-logical-plan"}
 daft-micropartition = {path = "../daft-micropartition", default-features = false}
@@ -34,6 +35,7 @@ python = [
   "daft-core/python",
   "daft-dsl/python",
   "daft-functions/python",
+  "daft-functions-list/python",
   "daft-functions-utf8/python",
   "daft-logical-plan/python",
   "daft-micropartition/python",
