fix: mypy catalog fixes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,9 @@
   ],
   "python.testing.unittestEnabled": false,
   "python.testing.pytestEnabled": true,
-  "makefile.configureOnOpen": false
+  "makefile.configureOnOpen": false,
+  "mypy-type-checker.args": [
+    "--strict",
+    "--ignore-missing-imports"
+  ]
 }
