--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -172,6 +172,7 @@ extra_javascript:
 - js/custom.js
 - js/docsearch.js
 - https://cdn.jsdelivr.net/npm/@docsearch/js@3
+- js/readthedocs.js
 
 # Extensions
 markdown_extensions:
