--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -30,6 +30,7 @@ lxml==5.3.0
 dask[dataframe]==2024.4.1
 numpy==1.26.2
 pandas==2.1.3
+pandas-stubs==2.2.2.240807
 xxhash>=3.0.0
 Pillow==10.4.0
 opencv-python==4.10.0.84
@@ -44,6 +45,7 @@ tqdm
 # Pyarrow 20.0.0 is incompatible with Ray hence we can't use newer versions for now.
 # See: https://github.com/Eventual-Inc/Daft/pull/4301
 pyarrow==19.0.1
+pyarrow-stubs==19.4
 # Ray
 ray[data, client]==2.34.0
 
