--- a/src/daft-decoding/Cargo.toml
+++ b/src/daft-decoding/Cargo.toml
@@ -4,7 +4,7 @@ atoi_simd = "0.15.5"
 chrono = {workspace = true}
 csv-async = "1.2.6"
 fast-float = "0.2.0"
-simdutf8 = "0.1.3"
+simdutf8 = {workspace = true}
 
 [lints]
 workspace = true
