--- a/src/daft-functions/Cargo.toml
+++ b/src/daft-functions/Cargo.toml
@@ -12,7 +12,7 @@ futures = {workspace = true}
 num-traits = {workspace = true}
 paste = "1.0.15"
 pyo3 = {workspace = true, optional = true}
-simdutf8 = "0.1.5"
+simdutf8 = {workspace = true}
 tiktoken-rs = {workspace = true}
 tokio = {workspace = true}
 typetag = {workspace = true}
