--- a/.github/workflows/pr-test-suite.yml
+++ b/.github/workflows/pr-test-suite.yml
@@ -283,7 +283,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.9'] # can't use 3.7 due to requiring anon mode for adlfs
+        python-version: ['3.9']
         daft-runner: [ray, native]
         enable-aqe: [1, 0]
         exclude:
@@ -365,7 +365,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.9'] # can't use 3.7 due to requiring anon mode for adlfs
+        python-version: ['3.9']
         daft-runner: [ray, native]
         enable-aqe: [1, 0]
         exclude:
@@ -463,7 +463,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.9'] # can't use 3.7 due to requiring anon mode for adlfs
+        python-version: ['3.9']
         daft-runner: [ray, native]
         enable-aqe: [1, 0]
         exclude:
@@ -544,7 +544,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.9'] # can't use 3.7 due to requiring anon mode for adlfs
+        python-version: ['3.9']
         daft-runner: [ray, native]
         enable-aqe: [1, 0]
         exclude:
