--- a/.github/workflows/pr-test-suite.yml
+++ b/.github/workflows/pr-test-suite.yml
@@ -3,8 +3,12 @@ name: PR test suite
 on:
   push:
     branches: [main]
+    paths:
+    - '!docs/**'
   pull_request:
     branches: [main]
+    paths:
+    - '!docs/**'
   # `workflow_dispatch` allows CodSpeed to trigger backtest
   # performance analysis in order to generate initial data.
   workflow_dispatch:
@@ -31,7 +35,7 @@ jobs:
         daft-runner: [ray, native]
         pyarrow-version: [8.0.0, 19.0.1]
         enable-aqe: [1, 0]
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-24.04-arm, macos-latest]
         exclude:
         - daft-runner: native
           enable-aqe: 1
