--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,8 @@
+# See https://pre-commit.ci/#configuration-autofix_prs for more info
+ci:
+  autofix_prs: false
+  skip: [fmt, clippy, cargo-check-default, cargo-check-all-features, check-for-rustls]
+
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
 repos:
@@ -65,16 +70,15 @@ repos:
           # Run the formatter.
   - id: ruff-format
 
-- repo: local
+- repo: https://github.com/doublify/pre-commit-rust
+  rev: master
   hooks:
   - id: fmt
     name: fmt
     description: Format files with cargo fmt.
-    entry: cargo fmt
-    language: system
-    types: [rust]
-    args: [--]
 
+- repo: local
+  hooks:
   - id: cargo-check-default
     name: cargo check (default)
     description: Check the package for errors with default features.
