--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,7 @@
 # See https://pre-commit.ci/#configuration-autofix_prs for more info
 ci:
   autofix_prs: false
-  skip: [fmt, clippy, cargo-check-default, cargo-check-all-features, check-for-rustls]
+  skip: [clippy, cargo-check-default, cargo-check-all-features, check-for-rustls]
 
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
