build: make dashboard self contained again, except when running in ci (#4417)
## Changes Made

splits the `dashboard/build.rs` into 2 separate mains. one for ci, and
one for normal.

Prior to the build.rs changes in
https://github.com/Eventual-Inc/Daft/pull/4272, you could manually
install daft via

```sh
uv pip install daft@file:///path/to/repo/Daft
```

but after these changes, this no longer works. 

So this PR essentially reverts those for everywhere except CI. 

Notes regarding ci. 

Maturin passes the `GITHUB_` env vars through to the image, so by
detecting the `GITHUB_ACTIONS` flag, the build should use the existing
code path.


- https://github.com/PyO3/maturin-action/blob/main/src/index.ts#L866
- https://github.com/PyO3/maturin-action/blob/main/src/index.ts#L250

so it should run as expected inside the CI.



⚠️ before merging, we must validate a manual run of the build CI. 



## Related Issues

<!-- Link to related GitHub issues, e.g., "Closes #123" -->

## Checklist

- [ ] Documented in API Docs (if applicable)
- [ ] Documented in User Guide (if applicable)
- [ ] If adding a new documentation page, doc is added to
`docs/mkdocs.yml` navigation
- [ ] Documentation builds and is formatted properly (tag @/ccmao1130
for docs review)

--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -85,6 +85,8 @@ jobs:
       with:
         target: x86_64
         args: --profile release-lto --out dist
+      env:
+        GITHUB_ACTIONS: true
 
     - name: Build wheels - Linux x86
       if: ${{ (inputs.os == 'ubuntu') && (inputs.arch == 'x86_64') }}
@@ -94,6 +96,8 @@ jobs:
         manylinux: 2_24
         # only produce sdist for linux x86 to avoid multiple copies
         args: --profile release-lto --out dist --sdist
+      env:
+        GITHUB_ACTIONS: true
 
     - name: Build wheels - Linux aarch64
       if: ${{ (inputs.os == 'ubuntu') && (inputs.arch == 'aarch64') }}
@@ -104,6 +108,8 @@ jobs:
         # only produce sdist for linux x86 to avoid multiple copies
         args: --profile release-lto --out dist --sdist
         before-script-linux: export JEMALLOC_SYS_WITH_LG_PAGE=16
+      env:
+        GITHUB_ACTIONS: true
 
     - name: Build wheels - Mac aarch64
       if: ${{ (inputs.os == 'macos') && (inputs.arch == 'aarch64')  }}
@@ -114,6 +120,7 @@ jobs:
       env:
         RUSTFLAGS: -Ctarget-cpu=apple-m1
         CFLAGS: -mtune=apple-m1
+        GITHUB_ACTIONS: true
 
     - name: Upload wheels
       uses: actions/upload-artifact@v4
