--- a/src/daft-local-plan/Cargo.toml
+++ b/src/daft-local-plan/Cargo.toml
@@ -6,6 +6,7 @@ common-scan-info = {path = "../common/scan-info", default-features = false}
 daft-core = {path = "../daft-core", default-features = false}
 daft-dsl = {path = "../daft-dsl", default-features = false}
 daft-logical-plan = {path = "../daft-logical-plan", default-features = false}
+daft-physical-plan = {path = "../daft-physical-plan", default-features = false}
 log = {workspace = true}
 pyo3 = {workspace = true, optional = true}
 serde = {workspace = true}
@@ -20,7 +21,8 @@ python = [
   "common-py-serde/python",
   "daft-core/python",
   "daft-dsl/python",
-  "daft-logical-plan/python"
+  "daft-logical-plan/python",
+  "daft-physical-plan/python"
 ]
 
 [lints]
