--- a/src/daft-physical-plan/Cargo.toml
+++ b/src/daft-physical-plan/Cargo.toml
@@ -13,6 +13,7 @@ daft-functions-list = {path = "../daft-functions-list", default-features = false
 daft-io = {path = "../daft-io", default-features = false}
 daft-logical-plan = {path = "../daft-logical-plan", default-features = false}
 daft-schema = {path = "../daft-schema", default-features = false}
+indexmap = {workspace = true}
 itertools = {workspace = true}
 log = {workspace = true}
 num-format = {workspace = true}
