--- a/.github/workflows/daft-profiling.yml
+++ b/.github/workflows/daft-profiling.yml
@@ -40,7 +40,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        uv pip install -r requirements-dev.txt
+        uv pip install -r requirements-dev.txt --verbose
     - uses: oven-sh/setup-bun@v2
       with:
         bun-version: latest
