--- a/.github/workflows/pr-test-suite.yml
+++ b/.github/workflows/pr-test-suite.yml
@@ -70,7 +70,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        uv pip install -r requirements-dev.txt
+        uv pip install -r requirements-dev.txt --verbose
 
     - name: Override pyarrow
       run: uv pip install pyarrow==${{ matrix.pyarrow-version }}
@@ -247,7 +247,7 @@ jobs:
 
     - name: Install Daft and dev dependencies
       run: |
-        uv pip install -r requirements-dev.txt dist/${{ env.package-name }}-*x86_64*.whl --force-reinstall
+        uv pip install -r requirements-dev.txt dist/${{ env.package-name }}-*x86_64*.whl --force-reinstall --verbose
         rm -rf daft
     - uses: actions/cache@v4
       env:
@@ -323,7 +323,7 @@ jobs:
         pip install uv
     - name: Install Daft and dev dependencies
       run: |
-        uv pip install -r requirements-dev.txt dist/${{ env.package-name }}-*x86_64*.whl --force-reinstall
+        uv pip install -r requirements-dev.txt dist/${{ env.package-name }}-*x86_64*.whl --force-reinstall --verbose
         rm -rf daft
     - name: Prepare tmpdirs for IO services
       run: |
@@ -410,7 +410,7 @@ jobs:
         pip install uv
     - name: Install Daft and dev dependencies
       run: |
-        uv pip install -r requirements-dev.txt dist/${{ env.package-name }}-*x86_64*.whl --force-reinstall
+        uv pip install -r requirements-dev.txt dist/${{ env.package-name }}-*x86_64*.whl --force-reinstall --verbose
         rm -rf daft
     - name: Prepare tmpdirs for IO services
       run: |
@@ -502,7 +502,7 @@ jobs:
         pip install uv
     - name: Install Daft and dev dependencies
       run: |
-        uv pip install -r requirements-dev.txt dist/${{ env.package-name }}-*x86_64*.whl --force-reinstall
+        uv pip install -r requirements-dev.txt dist/${{ env.package-name }}-*x86_64*.whl --force-reinstall --verbose
         rm -rf daft
     - uses: docker/setup-buildx-action@v3
     - uses: docker/build-push-action@v5
@@ -583,7 +583,7 @@ jobs:
         pip install uv
     - name: Install Daft and dev dependencies
       run: |
-        uv pip install -r requirements-dev.txt dist/${{ env.package-name }}-*x86_64*.whl --force-reinstall
+        uv pip install -r requirements-dev.txt dist/${{ env.package-name }}-*x86_64*.whl --force-reinstall --verbose
         rm -rf daft
     - name: Install ODBC Driver 18 for SQL Server
       run: |
@@ -669,7 +669,7 @@ jobs:
         pip install uv
     - name: Install dependencies
       run: |
-        uv pip install -r requirements-dev.txt
+        uv pip install -r requirements-dev.txt --verbose
     - name: Build dashboard with Bun
       working-directory: ./src/daft-dashboard/frontend
       run: |
@@ -814,7 +814,7 @@ jobs:
         pip install uv
     - name: Install dependencies
       run: |
-        uv pip install -r requirements-dev.txt
+        uv pip install -r requirements-dev.txt --verbose
     - name: Run doctests
       run: |
         source activate
