--- a/.github/workflows/daft-profiling.yml
+++ b/.github/workflows/daft-profiling.yml
@@ -39,8 +39,12 @@ jobs:
         pip install uv
 
     - name: Install dependencies
-      run: |
-        uv pip install -r requirements-dev.txt --verbose
+      uses: nick-fields/retry@v3
+      with:
+        timeout_minutes: 10
+        max_attempts: 3
+        retry_wait_seconds: 10
+        command: uv pip install -r requirements-dev.txt --verbose
     - uses: oven-sh/setup-bun@v2
       with:
         bun-version: latest
