--- a/.ruff.toml
+++ b/.ruff.toml
@@ -14,7 +14,7 @@ quote-style = "double"
 skip-magic-trailing-comma = false
 
 [lint]
-exclude = ["daft/pickle/cloudpickle.py", "daft/pickle/cloudpickle_fast.py", "daft/pickle/compat.py", "tutorials/**.ipynb"]
+exclude = ["daft/pickle/cloudpickle.py", "daft/pickle/cloudpickle_fast.py", "daft/pickle/compat.py"]
 extend-select = [
   "UP",  # pyupgrade
   "LOG",  # flake8-logging
@@ -29,7 +29,7 @@ extend-select = [
   "RUF032",  # Decimal() called with float literal argument
   "RUF034",  # Useless if-else condition
   "RUF041",  # Unnecessary nested Literal
-  "RUF100",  # unused-noqa"
+  "RUF100",  # unused-noqa
   "T10"  # flake8-debugger
 ]
 ignore = [
@@ -52,8 +52,14 @@ required-imports = ["from __future__ import annotations"]
 [lint.per-file-ignores]
 # Do not enforce usage and import order rules in init files
 "__init__.py" = ["E402", "F401", "I"]
+# Only add `from __future__ import annotations` to daft and tests folders
+# TODO(slade): Find an include pattern rather than exclude
+"benchmarking/**/*" = ["I002"]
+"docs/**/*" = ["I002"]
 # Allow wild imports in conftest
 "tests/conftest.py" = ["F405", "E402", "F403"]
+"tools/**/*" = ["I002"]
+"tutorials/**/*" = ["I002"]
 
 [lint.pydocstyle]
 convention = "google"
