--- a/src/daft-functions-json/Cargo.toml
+++ b/src/daft-functions-json/Cargo.toml
@@ -1,4 +1,5 @@
 [dependencies]
+arrow2 = {workspace = true, features = ["io_json_read"]}
 common-error = {path = "../common/error", default-features = false}
 daft-core = {path = "../daft-core", default-features = false}
 daft-dsl = {path = "../daft-dsl", default-features = false}
@@ -16,7 +17,8 @@ itertools.workspace = true
 python = [
   "common-error/python",
   "daft-core/python",
-  "daft-dsl/python"
+  "daft-dsl/python",
+  "dep:pyo3"
 ]
 
 [lints]
