--- a/src/daft-distributed/Cargo.toml
+++ b/src/daft-distributed/Cargo.toml
@@ -18,6 +18,9 @@ tokio-stream = {workspace = true}
 tokio-util = {workspace = true}
 uuid.workspace = true
 
+[dev-dependencies]
+daft-logical-plan = {path = "../daft-logical-plan", default-features = false}
+
 [features]
 python = [
   "dep:pyo3",
