--- a/src/daft-writers/Cargo.toml
+++ b/src/daft-writers/Cargo.toml
@@ -17,12 +17,13 @@ daft-micropartition = {path = "../daft-micropartition", default-features = false
 daft-recordbatch = {path = "../daft-recordbatch", default-features = false, features = ["arrow"]}
 parquet = {version = "54.2.1"}
 pyo3 = {workspace = true, optional = true}
+pyo3-async-runtimes = {workspace = true, optional = true}
 tokio = {workspace = true}
 urlencoding = "2.1.3"
 uuid = {version = "1.0", features = ["v4"]}
 
 [features]
-python = ["dep:pyo3", "common-file-formats/python", "common-error/python", "daft-dsl/python", "daft-io/python", "daft-logical-plan/python", "daft-micropartition/python"]
+python = ["dep:pyo3", "dep:pyo3-async-runtimes", "common-file-formats/python", "common-error/python", "daft-dsl/python", "daft-io/python", "daft-logical-plan/python", "daft-micropartition/python"]
 
 [lints]
 workspace = true
