move over exprs and series frontends

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -172,6 +172,7 @@ members = [
   "src/daft-functions-json",
   "src/daft-functions-list",
   "src/daft-functions-utf8",
+  "src/daft-functions-temporal",
   "src/daft-hash",
   "src/daft-image",
   "src/daft-io",
@@ -195,8 +196,7 @@ members = [
   "src/hyperloglog",
   "src/parquet2",
   "src/generated/spark-connect",
-  "src/daft-cli",
-  "src/daft-functions-temporal"
+  "src/daft-cli"
 ]
 
 [workspace.dependencies]
@@ -225,6 +225,7 @@ daft-dsl = {path = "src/daft-dsl"}
 daft-functions = {path = "src/daft-functions"}
 daft-functions-json = {path = "src/daft-functions-json"}
 daft-functions-list = {path = "src/daft-functions-list"}
+daft-functions-temporal = {path = "src/daft-functions-temporal"}
 daft-functions-utf8 = {path = "src/daft-functions-utf8"}
 daft-hash = {path = "src/daft-hash"}
 daft-local-execution = {path = "src/daft-local-execution"}
