--- a/src/daft-distributed/Cargo.toml
+++ b/src/daft-distributed/Cargo.toml
@@ -17,6 +17,7 @@ rand = {workspace = true}
 tokio = {workspace = true}
 tokio-stream = {workspace = true}
 tokio-util = {workspace = true}
+tracing = {workspace = true}
 uuid.workspace = true
 
 [features]
