--- a/src/daft-logical-plan/Cargo.toml
+++ b/src/daft-logical-plan/Cargo.toml
@@ -14,6 +14,7 @@ daft-core = {path = "../daft-core", default-features = false}
 daft-dsl = {path = "../daft-dsl", default-features = false}
 daft-functions = {path = "../daft-functions", default-features = false}
 daft-functions-list = {path = "../daft-functions-list", default-features = false}
+daft-functions-uri = {path = "../daft-functions-uri", default-features = false}
 daft-schema = {path = "../daft-schema", default-features = false}
 derivative = {workspace = true}
 indexmap = {workspace = true}
