--- a/src/common/runtime/Cargo.toml
+++ b/src/common/runtime/Cargo.toml
@@ -4,6 +4,7 @@ futures = {workspace = true}
 log = {workspace = true}
 oneshot = "0.1.8"
 tokio = {workspace = true}
+rand = {workspace = true}
 
 [lints]
 workspace = true
