--- a/src/daft-local-execution/Cargo.toml
+++ b/src/daft-local-execution/Cargo.toml
@@ -11,6 +11,7 @@ common-tracing = {path = "../common/tracing", default-features = false}
 daft-core = {path = "../daft-core", default-features = false}
 daft-csv = {path = "../daft-csv", default-features = false}
 daft-dsl = {path = "../daft-dsl", default-features = false}
+daft-distributed = {path = "../daft-distributed", default-features = false}
 daft-functions = {path = "../daft-functions", default-features = false}
 daft-functions-list = {path = "../daft-functions-list", default-features = false}
 daft-io = {path = "../daft-io", default-features = false}
@@ -28,7 +29,6 @@ futures = {workspace = true}
 indexmap = {workspace = true}
 indicatif = "0.17.9"
 itertools = {workspace = true}
-kanal = "0.1"
 log = {workspace = true}
 num-format = {workspace = true}
 opentelemetry = {workspace = true}
@@ -39,6 +39,7 @@ pyo3-async-runtimes = {workspace = true, optional = true}
 snafu = {workspace = true}
 tokio = {workspace = true}
 tokio-util = {workspace = true}
+tokio-stream = {workspace = true}
 tracing = {workspace = true}
 
 [features]
