remove aiohttp pin to make sure

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,7 +4,7 @@ maturin
 pre-commit
 docker
 
-aiohttp==3.12.4
+# aiohttp==3.12.4
 
 # Pinned requests due to docker-py issue: https://github.com/docker/docker-py/issues/3256
 requests<2.32.0
