ci: remove py runner from nightly test matrix and pin aiohttp (#4466)
## Changes Made

py runner is removed. these tests slipped under the radar, removing them
now.

Also, with aiohttp==3.12.6, ray tests seem to fail, so pinning it to
3.12.4.

## Related Issues

none

## Checklist

- [x] Documented in API Docs (if applicable)
- [x] Documented in User Guide (if applicable)
- [x] If adding a new documentation page, doc is added to
`docs/mkdocs.yml` navigation
- [x] Documentation builds and is formatted properly (tag @/ccmao1130
for docs review)

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,6 +4,9 @@ maturin
 pre-commit
 docker
 
+# Pinned aiohttp due to Ray connection issue in aiohttp==3.12.6
+aiohttp==3.12.4
+
 # Pinned requests due to docker-py issue: https://github.com/docker/docker-py/issues/3256
 requests<2.32.0
 
